RESOLVED FIXED 82765
Fix usage of LayoutUnits in table code.
https://bugs.webkit.org/show_bug.cgi?id=82765
Summary Fix usage of LayoutUnits in table code.
Emil A Eklund
Reported 2012-03-30 11:52:52 PDT
Fix usage of LayoutUnits in table code.
Attachments
Patch (9.00 KB, patch)
2012-03-30 12:05 PDT, Emil A Eklund
no flags
Emil A Eklund
Comment 1 2012-03-30 12:05:02 PDT
Eric Seidel (no email)
Comment 2 2012-03-30 15:49:30 PDT
Comment on attachment 134854 [details] Patch OK.
WebKit Review Bot
Comment 3 2012-03-30 17:13:36 PDT
Comment on attachment 134854 [details] Patch Clearing flags on attachment: 134854 Committed r112752: <http://trac.webkit.org/changeset/112752>
WebKit Review Bot
Comment 4 2012-03-30 17:13:40 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.